<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main_nav_graph"
    app:startDestination="@+id/home_screen">
    <fragment
        android:id="@+id/play_hunt"
        android:name="com.example.scavhunt.fragment.FragmentPlayHunt"
        android:label="@string/menu_play_hunt"
        tools:layout="@layout/fragment_play_hunt"/>
    <fragment
        android:id="@+id/home_screen"
        android:name="com.example.scavhunt.fragment.FragmentHomeScreen"
        android:label="@string/menu_home_screen"
        tools:layout="@layout/fragment_home_screen"/>
    <fragment
        android:id="@+id/create_hunt"
        android:name="com.example.scavhunt.fragment.create.FragmentCreateHunt"
        android:label="@string/menu_create_hunt"
        tools:layout="@layout/fragment_create_hunt"/>
</navigation>